--- a/src/components/root/App.css
+++ b/src/components/root/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.table {
+  flex: 1;
+  overflow: scroll;
 }
 
 .App-logo {
