--- a/src/components/root/App.css
+++ b/src/components/root/App.css
@@ -1,8 +1,18 @@
 .App {
-   height: 100%;
+  height: 100%;
   display: flex;
   background-color: #e2e2e2;
-
+}
+main {
+  display: flex;
+  flex-direction: column;
+}
+.login {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .table {
